--- a/KMeans/articles/优化.md
+++ b/KMeans/articles/优化.md
@@ -4,7 +4,7 @@
 和其他机器学习算法一样，K-Means 也要**评估**并且**最小化**聚类代价，在引入 K-Means 的代价函数之前，先引入如下定义：
 $$
 
-\mu_c(i)= \mbox{样本 $x^{(i)}$ 被分配到的聚类中心}
+\mu_c^{(i)} = \mbox{样本 $x^{(i)}$ 被分配到的聚类中心}
 
 $$
 
@@ -31,5 +31,5 @@ J也被称为**失真代价函数（Distortion Cost Function）**。
 由于 K-Means 每次迭代过程都在最小化 $$J$$，所以下面的代价函数变化曲线不会出现：
 
 <div style="text-align:center">
-<img src="../attachments/代价函数曲线.png" width="500"></img>
+<img src="../attachments/代价函数曲线.png" width="300"></img>
 </div>
