--- a/SVM/articles/大间距分类器.md
+++ b/SVM/articles/大间距分类器.md
@@ -1,7 +1,7 @@
 大间距分类器
 ========
 
-在上节中，我们了解到了SVM最小化代价函数过程为：
+在上节中，我们了解到了 SVM 最小化代价函数过程为：
 
 $$
 
@@ -9,28 +9,28 @@ $$
 
 $$
 
-并且，当$$y^{(i)}=1$$时，SVM希望$$\theta^Tx^{(i)} \geq 1$$；而当$$y^{(i)}=0$$时，SVM希望$$\theta^Tx^{(i)} \leq -1$$。则最小化代价函数的过程就可以描述为：
+并且，当 $$y^{(i)}=1$$ 时，SVM 希望 $$\theta^Tx^{(i)} \geq 1$$；而当 $$y^{(i)}=0$$ 时，SVM 希望 $$\theta^Tx^{(i)} \leq -1$$。则最小化代价函数的过程就可以描述为：
 
 $$
 
 \begin{align*}
 & \min\frac{1}{2}\sum\limits_{j=1}^{n}\theta_j^2 \\
-& \mbox{约束条件为：}
-\begin{cases}
-\theta^T x^{(i)} \geq 1 &\mbox{if $y^{(i)}=1$} \\ \theta^T x^{(i)} \leq -1 &\mbox{if $y^{(i)}=0$}
-\end{cases}
+\mbox{s.t}. \quad &\theta^T x^{(i)} \geq 1 &\mbox{if $y^{(i)}=1$} \\
+& \theta^T x^{(i)} \leq -1 &\mbox{if $y^{(i)}=0$}
 \end{align*}
 
 $$
 
-SVM最终找出的决策边界会是下图中黑色直线所示的决策边界，而不是绿色或者紫色的决策边界。该决策边界保持了与正、负样本都足够大的距离，因此，SVM是典型的大间距分类器（Large margin classifier）。
+SVM 最终找出的决策边界会是下图中黑色直线所示的决策边界，而不是绿色或者紫色的决策边界。该决策边界保持了与正、负样本都足够大的距离，因此，SVM 是典型的大间距分类器（Large margin classifier）。
 
-![大间距分类器](../attachments/大间距分类器.jpg)
+<div style="text-align:center">
+<img src="../attachments/大间距分类器.jpg" width="300"></img>
+</div>
 
 推导
 -----------
 
-假定有两个2维向量：
+假定有两个 2 维向量：
 
 $$
 
@@ -38,11 +38,13 @@ u=\left(\begin{matrix}u_1 \\ u_2\end{matrix}\right),v=\left(\begin{matrix}v_1 \\
 
 $$
 
-令$$p$$为$$v$$投影到$$u$$的线段长（该值可正可负），如下图所示：
+令 $$p$$ 为 $$v$$ 投影到 $$u$$ 的线段长（该值可正可负），如下图所示：
 
-![投影p](../attachments/投影p.png)
+<div style="text-align:center">
+<img src="../attachments/投影p.png" width="300"></img>
+</div>
 
-则$$u$$、$$v$$的内积为：
+则 $$u$$、$$v$$ 的内积为：
 
 $$
 
@@ -53,9 +55,9 @@ u^Tv &= p \cdot ||u|| \\
 
 $$
 
-其中，$$||u||$$为$$u$$的范数，也是$$u$$的长度。
+其中，$$||u||$$ 为 $$u$$ 的范数，也是 $$u$$ 的长度。
 
-假定我们的$$\theta=\left(\begin{matrix}\theta_1 \\ \theta_2\end{matrix}\right)$$，且令$$\theta_0 = 0$$，以使得向量$$\theta$$过原点，则：
+假定我们的 $$\theta=\left(\begin{matrix}\theta_1 \\ \theta_2\end{matrix}\right)$$，且令 $$\theta_0 = 0$$，以使得向量 $$\theta$$ 过原点，则：
 
 $$
 
@@ -75,13 +77,17 @@ $$
 
 $$
 
-其中，$$p^{(i)}$$为特征向量$$x^{(i)}$$在$$\theta$$上的投影：
+其中，$$p^{(i)}$$ 为特征向量 $$x^{(i)}$$ 在 $$\theta$$ 上的投影：
 
-![投影pi](../attachments/投影pi.jpg)
+<div style="text-align:center">
+<img src="../attachments/投影pi.jpg" width="300"></img>
+</div>
 
-当$$y^{(i)}=1$$时，我们希望$$\theta^T x^{(i)} \geq 1$$，亦即希望$$p^{(i)}\cdot||\theta|| \geq q$$，此时考虑两种情况：
+当 $$y^{(i)}=1$$ 时，我们希望 $$\theta^T x^{(i)} \geq 1$$，亦即希望 $$p^{(i)}\cdot||\theta|| \geq q$$，此时考虑两种情况：
 
-1. $$p^{(i)}$$很小，则需要$$||\theta||$$很大，这与我们$$\min\limits_\theta\frac{1}{2}||\theta||^2$$矛盾。
-2. $$p^{(i)}$$很大，如下图所示，即样本与决策边界的距离足够大，此时我们才能在既要$$||\theta||$$足够小的情况下，又能有$$\theta^tx^{(i)} \geq 1$$，保证预测精度够高。这就解释了为什么SVM的模型会具有大间距分类器的性质了。
+1. $$p^{(i)}$$ 很小，则需要 $$||\theta||$$ 很大，这与我们 $$\min\limits_\theta\frac{1}{2}||\theta||^2$$ 矛盾。
+2. $$p^{(i)}$$ 很大，如下图所示，即样本与决策边界的距离足够大，此时我们才能在既要 $$||\theta||$$ 足够小的情况下，又能有 $$\theta^tx^{(i)} \geq 1$$，保证预测精度够高。这就解释了为什么 SVM 的模型会具有大间距分类器的性质了。
 
-![pi足够大](../attachments/pi足够大.jpg)
+<div style="text-align:center">
+<img src="../attachments/pi足够大.jpg" width="300"></img>
+</div>
