--- a/SVM/articles/核函数.md
+++ b/SVM/articles/核函数.md
@@ -4,7 +4,9 @@
 定义
 --------
 
-![非线性分类](../attachments/非线性分类问题.png)
+<div style="text-align:center">
+<img src="../attachments/非线性分类问题.png" width="300"></img>
+</div>
 
 在逻辑回归中，我们会通过多项式扩展来处理**非线性**分类问题：
 
@@ -30,7 +32,7 @@ h_\theta(x) = \theta_0+\theta_1f_1+\theta_2f_2+\theta_3f_3+\cdots
 
 $$
 
-但多项式回归所带来的高阶项不一定作用明显，针对这一问题，SVM不会引入高阶项来作为新的特征，而是会选择一些**标记点（landmark）**，并将样本$$x$$与标记点$$l^{(i)}$$的**相似程度**作为新的训练特征$$f_i$$：
+但多项式回归所带来的高阶项不一定作用明显，针对这一问题，SVM 不会引入高阶项来作为新的特征，而是会选择一些**标记点（landmark）**，并将样本 $$x$$ 与标记点 $$l^{(i)}$$ 的**相似程度**作为新的训练特征 $$f_i$$：
 
 $$
 
@@ -38,8 +40,9 @@ f_i = similarity(x, l^{(i)})
 
 $$
 
-![landmarks](../attachments/landmarks.jpg)
-
+<div style="text-align:center">
+<img src="../attachments/landmarks.jpg" width="300"></img>
+</div>
 
 距离度量的方式就称之为**核函数（Kernel）**，最常见的核函数是**高斯核函数（Gaussian Kernel）**：
 
@@ -51,7 +54,7 @@ $$
 
 在高斯核中，注意到：
 
-- 如果样本与标记点足够接近，即$$x \approx l^{(i)}$$，则：
+- 如果样本与标记点足够接近，即 $$x \approx l^{(i)}$$，则：
 $$
 
 f \approx exp(-\frac{0^2}{2\delta^2}) \approx 1
@@ -61,15 +64,17 @@ $$
 - 如果样本远离标记点，则：
 $$
 
-f \approx \approx exp(-\frac{(\mbox{large number})^2}{2\delta^2}) \approx 0
+f \approx exp(-\frac{(\mbox{large number})^2}{2\delta^2}) \approx 0
 
 $$
 
 这一关系可以被如下的热力图所反映：
 
-![高斯核热力图](../attachments/高斯核热力图.jpg)
+<div style="text-align:center">
+<img src="../attachments/高斯核热力图.jpg" width="300"></img>
+</div>
 
-> 在使用高斯核函数前，需要做特征缩放（feature scaling），以使SVM同等程度的关注到不同的特征。
+> 在使用高斯核函数前，需要做特征缩放（feature scaling），以使 SVM 同等程度地关注到不同的特征。
 
 标记点选取
 --------------
@@ -90,7 +95,7 @@ l^{(1)}=x^{(1)}，l^{(2)}=x^{(2)}，l^{(3)}=x^{(3)} \cdots l^{(m)}=x^{(m)}
 
 $$
 
-则对于样本$$(x^{(i)}, y^{(i)})$$，我们计算其与各个标记点的距离：
+则对于样本 $$(x^{(i)}, y^{(i)})$$，我们计算其与各个标记点的距离：
 
 $$
 
@@ -110,7 +115,7 @@ f=\left(\begin{matrix}f_0 \\ f_1 \\ f_2 \\ \vdots \\ f_m  \end{matrix}\right) \q
 
 $$
 
-则具备核函数的SVM的训练过程如下：
+则具备核函数的 SVM 的训练过程如下：
 
 $$
 
