--- a/SVM/codes/垃圾邮件检测.md
+++ b/SVM/codes/垃圾邮件检测.md
@@ -36,7 +36,7 @@ a month to a coupl of dollarnumb you should checkout httpaddr or perhap
 amazon ecnumb if your run someth big to unsubscrib yourself from thi
 mail list send an email to emailaddr
 
-接下来，我们需要确定用于垃圾邮件分类器的单词，亦即，需要构建一个用于垃圾邮件分类器的词汇聊表。在本例中，将选择在垃圾邮件语料库（spam corpus）中，出现至少 100 次的单词。这么做的原因是，如果选择出现寥寥的单词放到训练样本中，可能就会造成模型的过拟合。最终完整的词汇列表存入了文件 **vocab.txt** 中，当中含有共计 1899 个单词：
+接下来，我们需要确定用于垃圾邮件分类器的单词，亦即，需要构建一个用于垃圾邮件分类器的词汇列表。在本例中，将选择在垃圾邮件语料库（spam corpus）中，出现至少 100 次的单词。这么做的原因是，如果选择将出现寥寥的单词放到训练样本中，可能就会造成模型的过拟合。最终完整的词汇列表存入了文件 **vocab.txt** 中，当中含有共计 1899 个单词：
 
 ```
 1 aa
