--- a/光学字符识别/articles/上限分析.md
+++ b/光学字符识别/articles/上限分析.md
@@ -1,7 +1,7 @@
 上限分析（Ceiling analysis）
 =========
 
-光学字符识别并不是一个单一的过程，而是由若干过程构成的流水线。我们知道，字符识别作为该流水线的出口，其将是衡量光学字符识别准确率的依据。工程浩瀚，我们不可能在流水线的每一步都花费巨额的精力来作出改善，因此，我们需要一种手段来知道去改善**哪一步**是最值得的，**上限分析（Ceiling analysis）**则是手段之一。
+光学字符识别并不是一个单一的过程，而是由若干过程构成的流水线。我们知道，字符识别作为该流水线的出口，其将是衡量光学字符识别准确率的依据。工程浩瀚，我们不可能在流水线的每一步都花费巨额的精力来作出改善，因此，我们需要一种手段来知道去改善**哪一步**是最值得的，**上限分析（Ceiling analysis）**就是手段之一。
 
 <div style="text-align:center">
 <img src="../attachments/流水线.png" width="500"></img>
