--- a/大规模机器学习/articles/掌握大数据.md
+++ b/大规模机器学习/articles/掌握大数据.md
@@ -5,7 +5,7 @@
 
 > It's not who has the best algorithm that wins. It's who has the most data.
 
-在识别易混淆词汇一例中，我们分别使用了四种算法：（1）Perceptron；（2）Naive Bayes；（3）Winnow；（4）Memory-Based。通过下图可以看淡，这四种算法都随着数据规模的增长获得了更高的精度：
+在识别易混淆词汇一例中，我们分别使用了四种算法：（1）Perceptron；（2）Naive Bayes；（3）Winnow；（4）Memory-Based。通过下图可以看到，这四种算法都随着数据规模的增长获得了更高的精度：
 
 <div style="text-align:center">
 <img src="../attachments/识别混淆词汇.png" width="300"></img>
