--- a/大规模机器学习/articles/梯度下降.md
+++ b/大规模机器学习/articles/梯度下降.md
@@ -17,7 +17,7 @@ $$
 
 $$
 
-可以看到，没更新一个参数 $$\theta_j$$，我们都不得不遍历一遍样本集，在 $$m$$ 很大时，该算法就显得比较低效。但是，批量梯度下降法能找到全局最优解：
+可以看到，每更新一个参数 $$\theta_j$$，我们都不得不遍历一遍样本集，在 $$m$$ 很大时，该算法就显得比较低效。但是，批量梯度下降法能找到全局最优解：
 
 <div style="text-align:center">
 <img src="../attachments/批量梯度下降过程.png" width="300"></img>
@@ -50,6 +50,8 @@ $$
 <div style="text-align:center">
 <img src="../attachments/误差变化曲线1000.png" width="300"></img>
 </div>
+
+另外，遇到下面的曲线也不用担心，其并不意味着我们的学习率出了问题，有可能是我们的平均间隔取的太小：
 
 <div style="text-align:center">
 <img src="../attachments/误差变化曲线抖动.png" width="300"></img>
@@ -86,7 +88,7 @@ $$
 Mini 批量梯度下降法（Mini-batch gradient descent）
 --------------------
 
-Mini 批量梯度下降法是批量梯度下降法和随机梯度下降法的折中，通过参数 $$b$$ 指明了每次迭代中，用于更新 $$\theta$$ 的样本数。假定 $$b=10,m=1000$$，Mini 批量梯度下降法的工作过程如下：
+Mini 批量梯度下降法是批量梯度下降法和随机梯度下降法的折中，通过参数 $$b$$ 指明了每次迭代时，用于更新 $$\theta$$ 的样本数。假定 $$b=10,m=1000$$，Mini 批量梯度下降法的工作过程如下：
 
 $$
 
