--- a/异常检测/articles/多元高斯分布.md
+++ b/异常检测/articles/多元高斯分布.md
@@ -121,7 +121,7 @@ p(x) &= p(x_1;\mu_1, \delta^2_1)p(x_2;\mu_2, \delta^2_2) \cdots p(x_n;\mu_n, \de
 &= \prod\limits_{j=1}^np(x_j;\mu_j,\delta_j^2) \\
 &= \prod\limits_{j=1}^n\frac{1}{\sqrt{2\pi}\delta_j}exp(-\frac{(x_j-\mu_j)^2}{2\delta_j^2})
 \end{align*}$$|$$p(x)=\frac{1}{(2\pi)^{\frac{n}{2}}|\Sigma|^\frac{1}{2}}exp(-\frac{1}{2}(x-\mu)^T\Sigma^{-1}(x-\mu))$$|
-|需要手动创建一些特征来描述某些特征的相关性|利用协方差 $$Sigma$$ 矩阵获得了各个特征相关性|
+|需要手动创建一些特征来描述某些特征的相关性|利用协方差矩阵 $$\Sigma$$ 获得了各个特征相关性|
 |计算复杂度低，适用于高维特征|计算复杂|
 |在样本数目 $$m$$ 较小时也工作良好|需要 $$\Sigma$$ 可逆，亦即需要 $$m > n$$，且各个特征不能线性相关，如不能存在 $$x_2 = 3x_1$$ 或者 $$x_3 = x_1 + 2x_2$$|
 
