--- a/异常检测/articles/概述.md
+++ b/异常检测/articles/概述.md
@@ -1,7 +1,7 @@
 概述
 =========
 
-异常检测（Anomaly Detection）是机器学习里面的一个常见应用，机器被训练知道什么样的样本是正常样本，从而具备识别异常样本的能力。
+异常检测（Anomaly Detection）是机器学习里面的一个常见应用，机器通过训练，将知道什么样的样本是正常样本，从而具备识别异常样本的能力。
 
 飞机制造商在飞机引擎从生产线上流入市场前，会考虑进行**异常检测**，以防止不合格引擎造成恶劣结果。而为了进行异常检测，通常就需要采集一些引擎特征，如：
 
@@ -32,7 +32,7 @@ $$
 <img src="../attachments/新来的异常样本.png" width="450"></img>
 </div>
 
-综上我们知道，我们需要根据已有数据集构建一个**概率模型**，如果某一样本被是正常样本的概率足够小，它就该被当做是异常：
+综上我们知道，我们需要根据已有数据集构建一个**概率模型 $$p(x)$$**，如果某一样本被认为是正常样本的概率足够小，它就该被当做是异常：
 
 $$
 
