--- a/异常检测/articles/特征选择.md
+++ b/异常检测/articles/特征选择.md
@@ -22,7 +22,6 @@
 <img src="../attachments/对数操作后的分布.png" width="300"></img>
 </div>
 
-
 构建新特征
 -----------
 
@@ -30,10 +29,12 @@
 
 $$
 
-x_1=内存使用率
-x_2=每秒磁盘访问次数
-x_3=CPU负载
-x_4=网络流量
+\begin{align*}
+x_1 &= 内存使用率 \\
+x_2 &= 每秒磁盘访问次数 \\
+x_3 &= CPU负载 \\
+x_4 &= 网络流量
+\end{align*}
 
 $$
 
