--- a/异常检测/articles/算法流程与评估.md
+++ b/异常检测/articles/算法流程与评估.md
@@ -39,7 +39,7 @@ $$
 <img src="../attachments/高斯分布热力图.png" width="300"></img>
 </div>
 
-将 $$p(x)$$ 投影到特征 $$x_1$$、$$x_2$$ 所在平面，紫色曲线就反映了 $$\epsilon$$ 的投影，落在截断区域以外的样本，都会被认为是异常样本：
+将 $$p(x)$$ 投影到特征 $$x_1$$、$$x_2$$ 所在平面，下图紫色曲线就反映了 $$\epsilon$$ 的投影，它是一条截断曲线，落在截断曲线以外的样本，都会被认为是异常样本：
 
 <div style="text-align:center">
 <img src="../attachments/高斯分布热力图投影.png" width="300"></img>
@@ -69,6 +69,6 @@ $$
 -----------
 
 由于异常样本是非常少的，所以整个数据集是非常**偏斜**的，我们不能单纯的用预测准确率来评估算法优劣，因此，可以考虑使用我们在**算法分析与优化**一节中提过的评价手段：
-- 真阳性，假阳性，真阴性，假阴性
-- 查准率（Precision）/ 召回率（Recall）
-- $$F_1-score$$
+- 真阳性、假阳性、真阴性、假阴性
+- 查准率（Precision）与 召回率（Recall）
+- $$F_1Score$$
