--- a/异常检测/codes/异常检测.md
+++ b/异常检测/codes/异常检测.md
@@ -187,7 +187,7 @@ print 'Best F1 on Cross Validation Set:  %f\n'%F1
 print '# Outliers found: %d' % np.sum(pTest < epsilon)
 ```
 
-我们使用多元高斯分布模型测试了一个**小维度（$$n=2$$）**数据集，发现了 $$6$$ 个异常点，获得使得交叉验证集表现最好的  $$\epsilon=8.990 \times 10^{-05}$$，此时交叉验证集的 $$F_1Score=0.875$$。下图标注了异常点，以及模型的的等高线：
+我们使用多元高斯分布模型测试了一个**小维度（$$n=2$$）**数据集，发现了 $$6$$ 个异常点，获得使得交叉验证集表现最好的  $$\epsilon=8.990 \times 10^{-05}$$，此时交叉验证集的 $$F_1Score=0.875$$。下图标注了异常点，以及概率模型的等高线：
 
 <div style="text-align:center">
 <img src="../attachments/小维度数据测试.png" width="400"></img>
