--- a/推荐系统/articles/协同过滤.md
+++ b/推荐系统/articles/协同过滤.md
@@ -107,8 +107,8 @@ $$\sum_{(i,j):r(i,j)=1}$$ 反映了用户和商品所有有效配对。
 
 使用了协同过滤的推荐算法流程为：
 
-1. 随机初始化 $$x^{(i)},...,x^{(n_m)} ; \theta^{(1)}, ..., \theta^{(n_u)}$$ 为一些较小值，为避免系统陷入僵死状态，不初始化为 0，这与神经网络一节中提到的初始化方法类似。
-2. 适应梯度下降法来最小化 $$J(x^{(i)},...,x^{(n_m)};\theta^{(1)}, ..., \theta^{(n_u)})$$，对于  $$j=1,2,..,n_u$$，$$i=1,2,...,n_m$$，参数的更新式为：
+1. 随机初始化 $$x^{(i)},...,x^{(n_m)} ; \theta^{(1)}, ..., \theta^{(n_u)}$$ 为一些较小值，与神经网络的参数初始化类似，为避免系统陷入僵死状态，不使用 0 值初始化。
+2. 使用梯度下降法来最小化 $$J(x^{(i)},...,x^{(n_m)};\theta^{(1)}, ..., \theta^{(n_u)})$$，对于  $$j=1,2,..,n_u$$，$$i=1,2,...,n_m$$，参数的更新式为：
 $$
 
 \begin{align*}
@@ -120,7 +120,7 @@ $$
 $$
 3. 如果用户的偏好向量为 $$\theta$$，而商品的特征向量为 $$x$$，则可以预测用户评价为 $$\theta^T x$$。
 
-因为协同过滤算法 $$\theta$$ 和 $$x$$ 相互影响，因此，二者都没必要使用偏置 $$\theta_0$$ 和 $$x_0$$，即，$$x \in R^n$$ 且 $$\theta \in R^n$$。
+因为协同过滤算法 $$\theta$$ 和 $$x$$ 相互影响，因此，二者都没必要使用偏置 $$\theta_0$$ 和 $$x_0$$，即，$$x \in R^n$$、$$\theta \in R^n$$。
 
 获得类似电影
 ----------------
