--- a/推荐系统/articles/基于内容的推荐系统.md
+++ b/推荐系统/articles/基于内容的推荐系统.md
@@ -31,7 +31,7 @@ $$
 | Nonstop car chases   | 0        | 0      | 5        | 4       | 0.1     | 1.0     |
 | Swords vs. karate    | 0        | 0      | 5        | ?       | 0       | 0.9     |
 
-假设用户 $$i$$ 对于每个指数的看中程度由向量 $$\theta^{(i)}$$ 所衡量，则我们知道，该用户对电影 $$j$$ 的打分就为：
+假设用户 $$i$$ 对于每个指数的偏好程度由向量 $$\theta^{(i)}$$ 所衡量，则我们估计该用户对电影 $$j$$ 的打分为：
 
 $$
 
@@ -93,9 +93,9 @@ $$
 
 \begin{align*}
 & \mbox{更新偏置（插值）：} \\
-& \theta_0^{(j)} = \theta_0^{(j)} - \alpha\sum_{i:r(i,j)=1}\big((\theta^{(j)})^T x^{(i)} - y^{(i,j)}\big) x_0^{(i)} \\
+& \quad \theta_0^{(j)} = \theta_0^{(j)} - \alpha\sum_{i:r(i,j)=1}\big((\theta^{(j)})^T x^{(i)} - y^{(i,j)}\big) x_0^{(i)} \\
 & \mbox{更新权重：} \\
-& \theta_k^{(j)} = \theta_k^{(j)} - \alpha\left(\sum_{i:r(i,j)=1}\big((\theta^{(j)})^T x^{(i)} - y^{(i,j)}\big) x_k^{(i)} + \lambda\theta_k^{(j)}\right), \quad k \neq 0
+& \quad \theta_k^{(j)} = \theta_k^{(j)} - \alpha\left(\sum_{i:r(i,j)=1}\big((\theta^{(j)})^T x^{(i)} - y^{(i,j)}\big) x_k^{(i)} + \lambda\theta_k^{(j)}\right), \quad k \neq 0
 \end{align*}
 
 $$
